--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=3000
-MONGO_URI=my_db_connection_string
-NODE_ENV=production
+MONGO_URI=mongodb+srv://sebastianslezak2000_db_user:Er7h6KC5OUIJGrlF@cluster0.lxy46cu.mongodb.net/chatapp_db?appName=Cluster0
+NODE_ENV=development
+JWT_SECRET=myjwtsecret
