--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ PORT=3000
 MONGO_URI=mongodb+srv://sebastianslezak2000_db_user:Er7h6KC5OUIJGrlF@cluster0.lxy46cu.mongodb.net/chatapp_db?appName=Cluster0
 NODE_ENV=development
 JWT_SECRET=myjwtsecret
+RESEND_API_KEY=re_jeANGvLM_CWRUdDdpaAo3pV16uT4nTe5H
+EMAIL_FROM="test@test.com"
+EMAIL_FROM_NAME="Testowy user"
