--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,21 @@
 PORT=3000
 MONGO_URI=mongodb+srv://sebastianslezak2000_db_user:Er7h6KC5OUIJGrlF@cluster0.lxy46cu.mongodb.net/chatapp_db?appName=Cluster0
+
 NODE_ENV=development
+
 JWT_SECRET=myjwtsecret
+
 RESEND_API_KEY=re_jeANGvLM_CWRUdDdpaAo3pV16uT4nTe5H
-EMAIL_FROM="test@test.com"
-EMAIL_FROM_NAME="Testowy user"
+EMAIL_FROM=test@test.com
+EMAIL_FROM_NAME=Testowy user
+
+CLIENT_URL=http://localhost:5173
+
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+ARCJET_KEY=your_arcjet_key
+ARCJET_ENV=development
+
+// todo
